[package]
name = "merkle_rewards"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ahash = "=0.8.4"
anchor-spl = "0.28.0"
spl-token-2022 = "0.6.0"
# Downgrade solana-program to a compatible version
solana-program = "1.16.27"
solana-zk-token-sdk = "1.14.12"
sha2 = "0.10.8"

